--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: postgres_produtos
     restart: always
     environment:
-      POSTGRES_DB: postgres_produtos
+      POSTGRES_DB: produtos
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
     ports:
